<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.dentim.karaoke.ui.home.HomeFragment"
        android:label="@string/app_name">
        
        <action
            android:id="@+id/action_home_to_upload"
            app:destination="@id/uploadFragment" />
            
        <action
            android:id="@+id/action_home_to_library"
            app:destination="@id/libraryFragment" />
            
        <action
            android:id="@+id/action_home_to_player"
            app:destination="@id/playerFragment" />
            
    </fragment>

    <fragment
        android:id="@+id/uploadFragment"
        android:name="com.dentim.karaoke.ui.upload.UploadFragment"
        android:label="@string/upload_track" />

    <fragment
        android:id="@+id/libraryFragment"
        android:name="com.dentim.karaoke.ui.library.LibraryFragment"
        android:label="@string/track_library" />

    <fragment
        android:id="@+id/playerFragment"
        android:name="com.dentim.karaoke.ui.player.PlayerFragment"
        android:label="@string/karaoke_player">
        
        <argument
            android:name="sessionId"
            app:argType="string" />
            
    </fragment>

</navigation>